[workspace]

members = [
    "00_debug_kernel",
    "01_storage_kernel",
    "02_reboot_kernel",
    "03_inbox_kernel",
    "04_filtering_kernel",
    "05_outbox_kernel",
    "06_counter_kernel",
    "07_upgrade_kernel",
    "07_upgrade_kernel/upgrade-client" ,
    "09_tzwitter_app/kernel" 
]

# FIXME: what is this? Do we need it?
[profile.release]
lto = true
opt-level = 's'
