(executable
 (name outbox_daemon)
 (public_name outbox-daemon)
 (libraries
  tezos-base
  tezos-clic
  tezos-protocol-alpha
  octez-smart-rollup-client-lib-alpha)
 (flags
  (:standard)
  -open Tezos_base.TzPervasives
  -open Tezos_base.TzPervasives.Error_monad.Legacy_monad_globals
  -open Tezos_protocol_alpha
  -open Octez_smart_rollup_client_lib_alpha))
