[package]
name = "output-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel/", default-features = false }
debug = { git = "https://gitlab.com/tezos/kernel/"}
kernel = {git = "https://gitlab.com/tezos/kernel/", default-features = false }
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
mock_host = { git = "https://gitlab.com/tezos/kernel/" }

rand = { version = "0.8", optional = true }
fake = { version = "2.5", optional = true }
proptest = { version = "1.0", optional = true }

[features]
default = []
testing = ["rand", "fake", "proptest" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
