[package]
name = "tzwitter-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos-smart-rollup = "0.1.0"
tezos_data_encoding = "0.4.4"

# To hash everything
ed25519-compact = { version ="2.0", default-features = false }
tezos_crypto_rs = { version = "0.4", default-features = false }

serde = "1.0.152"
serde-json-wasm = "0.5.0"
num-bigint = "0.3"

[dev-dependencies]
hex = "0.4.3"
