[package]
name = "counter-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-smart-rollup-core = { git = "https://gitlab.com/tezos/tezos" } 
tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos" } 