[package]
name = "sequencer-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = "1.0.158"
serde_json = "1.0.95"
sequencer = {path= "../sequencer-lib"}
hex = "0.4.3"
counter-kernel = {path = "../counter-kernel"}