[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = "1.26.0"
async-trait = "0.1.68"
tezos-smart-rollup-core = { git = "https://gitlab.com/tezos/tezos" } 
tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos" } 
serde = "1.0.158"
hex = "0.4.3"
sled="0.34"
bincode = "1.3.3"
reqwest = { version = "0.11.16", features = ["stream"]}
futures-util = "0.3.28"
serde_json = "1.0.95"

[dev-dependencies]
uuid = {version = "1.3.0", features=["v4"]}